--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,10 @@ Fble:
 * Figure out how to allow an fble file to be reused for multiple different
   programs.
 
+Fble Cleanup:
+* Have static instance of @ value that is reused, rather than allocating lots
+  of copies.
+
 Fbld 4 Spec:
 * Clarify in spec that alias acts as another way to define the body of an
   entity, it doesn't effect the use of that entity.
