--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@ Fble Cleanup:
 * Share common code between checking StructType, UnionType, and FuncType?
 * Share common code for checking a type is a type and evaluating it to its
   type value.
+* Remove unused FbleStructAccessExpr, FbleUnionAccessExpr
 
 Fbld 4 Spec:
 * Clarify in spec that alias acts as another way to define the body of an
