--- a/TODO.txt
+++ b/TODO.txt
@@ -30,16 +30,14 @@ Fble:
  - access expr with object that isn't a struct or union value
  - access expr with invalid field
  - union access with correct tag
- - let expr binding type fails to compile
- - let expr binding expr fails to compile
- - let expr binding type mismatch
- - let expr kinded type fails to evaluate
 * Finish implementing evaluator, adding tests, until snake.fble runs.
 * Figure out how to allow an fble file to be reused for multiple different
   programs.
 
 Fble Cleanup:
 * Share common code between checking StructType, UnionType, and FuncType?
+* Anyway to clean up cleanup code? For example, duplicated cleanup in LET_EXPR
+  for error conditions.
 
 Fbld 4 Spec:
 * Clarify in spec that alias acts as another way to define the body of an
