Introduced PUSH_INSTR.
And use it as part of the struct and union access sequence. The push
instruction will be reused for conditional expressions.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 Fble:
+* Add support for conditional expressions.
+* Add support for functions.
 * Finish implementing evaluator, adding tests, until snake.fble runs.
 * Figure out how to allow an fble file to be reused for multiple different
   programs.
