Introduce VPush convenience function.
For pushing values onto the value stack.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Fble:
+* Figure out how to support recursive types.
 * Finish implementing evaluator, adding tests, until snake.fble runs.
 * Figure out how to allow an fble file to be reused for multiple different
   programs.
