--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 Fble:
-* Rewrite fble.h abstract syntax to match new spec
- - And rewrite the implementation to match
-* Implement strong/weak refcounting scheme
+* Rewrite eval for new fble.h.
+* Figure out a better way to compile types.
+* Implement strong/weak refcounting scheme.
 * Implement recursive let properly.
 * Implement lazy type evaluation properly.
 * Implement type equality properly.
