--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,14 @@
 Fble:
-* Test and add support for recursive types.
 * Test and add support for non-recursive polymorphism.
+ - Have 'var' compiled type, use it to improve error messages.
  - Implement type equality properly.
+* Test and add support for recursive types.
 * Test and add support for recursive polymorphism.
  - Implement lazy type evaluation properly.
 * Test and add support for processes.
 * Finish implementing evaluator, adding tests, until snake.fble runs.
 
 Fble Cleanup:
-* Use better names for BasicType* variables than 'basic' in compile.c.
 * Share common code between checking FbleStructType, FbleUnionType, and
   FbleFuncType?
 
