--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 Fble:
 * Test and add support for recursive types.
- - Test a case where TypesEqual would be infinitely recursive.
- - Test a case where Subst would be infinitely recursive (a la snake.fble)
+ - Avoid infinite recursion in Subst.
 * Clarify spec on partial and excessive function and poly application
 * Test partial function and excessive function application.
 * Test non-recursive polymorphism in all its flavors.
