--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 Fble:
-* Figure out how to fix recursive reference counting.
+* Implement new reference counting scheme.
 * Test and add support for recursive types.
  - Cache poly applications to avoid infinite recursion there.
 * Clarify spec on partial and excessive function and poly application
