--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 Fble:
 * Implement new reference counting scheme.
+* Re-enable langs/fble/8.3-06-poly-apply-recursive-type.tcl.XXX
 * Test and add support for recursive types.
  - Cache poly applications to avoid infinite recursion there.
 * Clarify spec on partial and excessive function and poly application
