Fix broken test case, add failing test case.

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,6 +9,7 @@ Fble:
 * Test and add support for recursive polymorphism.
 * Test and add support for processes.
 * Finish implementing evaluator, adding tests, until snake.fble runs.
+* Better error messages on types that have the same name but different values.
 
 Fble Cleanup:
 * Don't duplicate reference counting code between values and types. Share it
