--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 Fble:
+* Add test that a Maybe<Unit> can be the arg of a conditional
+ - There's a missing Eval call there (see failing snake.fble).
 * fix failing langs/fble/8.3-06-poly-apply-recursive-type.tcl
- - Cache poly apply results, using TypeEquals for cache lookup.
+ - Figure out how to deal with reference loops from poly apply cache.
 * Fix failing type test.
 * Clarify spec on partial and excessive function and poly application
 * Test partial function and excessive function application.
