Added support for evaluating proc eval.

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@ Fble:
  - Need to debug to understand what's broken, or clean up ref handling and
    hope that fixes the bug.
 * Test and add support for processes.
- - Add Eval instr
+ - Execute the evaluated process result in fble-test.
 * Clarify spec on partial and excessive function and poly application
 * Test partial function and excessive function application.
 * Test non-recursive polymorphism in all its flavors.
