--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,11 @@ Fble:
  - Need to debug to understand what's broken, or clean up ref handling and
    hope that fixes the bug.
 * Test and add support for procs.
- - input type, output type, get, put, link, exec
+ - change FbleProcInstr to take the ProcValue from the vstack.
+ - Make FbleEvalProcValue as a subclass of FbleProcValue
+ - Add and implement Get, Put, Link, Exec (single binding) subclasses of
+   FbleProcValue 6.0-02-* should now pass.
+ - Add threading infrastructure and support for multi-binding exec
 * Clarify spec on partial and excessive function and poly application
 * Test partial function and excessive function application.
 * Test non-recursive polymorphism in all its flavors.
