--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,6 @@ Fble:
  - Need to debug to understand what's broken, or clean up ref handling and
    hope that fixes the bug.
 * Test and add support for procs.
- - Make FbleEvalProcValue as a subclass of FbleProcValue
  - Add and implement Get, Put, Link, Exec (single binding) subclasses of
    FbleProcValue 6.0-02-* should now pass.
  - Add threading infrastructure and support for multi-binding exec
@@ -18,6 +17,7 @@ Fble:
 * Figure out how to make a version of 7.4-06-* for values.
 
 Fble Cleanup:
+* Share common code between PROC_TYPE, INPUT_TYPE, and OUTPUT_TYPE?
 * Clean up when Eval is done for types.
  - Always eval at Compile, except internal calls to CompileType from in
    CompileType. That should work I think.
